--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/home/rickylaskowski/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3531040321.properties
+deploy.ant.properties.file=/Users/DrydenOld/Library/Application Support/NetBeans/8.2/config/GlassFishEE6/Properties/gfv3315458821.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/rickylaskowski/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=/home/rickylaskowski/GlassFish_Server/glassfish
-j2ee.server.instance=[/home/rickylaskowski/GlassFish_Server/glassfish:/home/rickylaskowski/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/rickylaskowski/GlassFish_Server
-user.properties.file=/home/rickylaskowski/.netbeans/8.2/build.properties
+j2ee.server.domain=/Applications/NetBeans/glassfish-4.1.1/glassfish/domains/domain1
+j2ee.server.home=/Applications/NetBeans/glassfish-4.1.1/glassfish
+j2ee.server.instance=[/Applications/NetBeans/glassfish-4.1.1/glassfish:/Applications/NetBeans/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/Applications/NetBeans/glassfish-4.1.1
+user.properties.file=/Users/DrydenOld/Library/Application Support/NetBeans/8.2/build.properties
