--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/home/rickylaskowski/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3531040321.properties
+deploy.ant.properties.file=D:\\Users\\IT353S843\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv31887866819.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/rickylaskowski/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=/home/rickylaskowski/GlassFish_Server/glassfish
-j2ee.server.instance=[/home/rickylaskowski/GlassFish_Server/glassfish:/home/rickylaskowski/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/rickylaskowski/GlassFish_Server
-user.properties.file=/home/rickylaskowski/.netbeans/8.2/build.properties
+j2ee.server.domain=D:/Users/IT353S843/AppData/Roaming/NetBeans/8.0.2/config/GF_4.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1
+user.properties.file=D:\\Users\\IT353S843\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
