--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,5 @@ j2ee.server.domain=C:/Users/Richa/GlassFish_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/Richa/GlassFish_Server/glassfish
 j2ee.server.instance=[C:\\Users\\Richa\\GlassFish_Server\\glassfish;C:\\Users\\Richa\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Users/Richa/GlassFish_Server
-selected.browser=default
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\Richa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
