--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -19,6 +19,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/profile.xhtml</welcome-file>
+        <welcome-file>faces/signUp.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
