--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,10 +27,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-<<<<<<< HEAD
-        <welcome-file>faces/logIn.xhtml</welcome-file>
-=======
-        <welcome-file>logIn.xhtml</welcome-file>
->>>>>>> master
+        <welcome-file>faces/profile.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
