Login and signup bugs fixed, all working as intended

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,5 +8,5 @@ j2ee.server.middleware=C:/Users/Richa/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=D:\\Users\\IT353S843\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Richa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
