--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,13 +1,13 @@
 
-deploy.ant.properties.file=C:\\Users\\ericz\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3337895132.properties
+deploy.ant.properties.file=C:\\Users\\ericz\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-46860730.properties
 file.reference.primefaces-6.2.jar=C:\\Users\\ericz\\OneDrive\\Documents\\NetBeansProjects\\jars\\primefaces-6.2.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/ericz/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/ericz/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\ericz\\GlassFish_Server\\glassfish;C:\\Users\\ericz\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/ericz/GlassFish_Server
+j2ee.server.domain=C:/Users/ericz/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=Chrome
 user.properties.file=C:\\Users\\ericz\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
