--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.primefaces-6.2.jar-1=C:\\Users\\Richa\\Desktop\\primefaces-6.2.jar
+file.reference.primefaces-6.2.jar-2=/Users/DrydenOld/Desktop/primefaces-6.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +45,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.primefaces-6.2.jar-1}
+    ${file.reference.primefaces-6.2.jar-1}:\
+    ${file.reference.primefaces-6.2.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
