--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,12 +1,12 @@
 
-deploy.ant.properties.file=C:\\Users\\Richa\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv31574138186.properties
+deploy.ant.properties.file=C:\\Users\\ericz\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3337895132.properties
 file.reference.primefaces-6.2.jar=C:\\Users\\ericz\\OneDrive\\Documents\\NetBeansProjects\\jars\\primefaces-6.2.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Richa/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/Richa/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\Richa\\GlassFish_Server\\glassfish;C:\\Users\\Richa\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/Richa/GlassFish_Server
+j2ee.server.domain=C:/Users/ericz/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/ericz/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\ericz\\GlassFish_Server\\glassfish;C:\\Users\\ericz\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/ericz/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Richa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\ericz\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
