--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-  
+    ${libs.PrimeFaces_6.2.classpath}:\
+    ${file.reference.cdi-api-2.0.jar-1}
     ${libs.PrimeFaces_6.2.classpath}:\
     ${file.reference.cdi-api-2.0.jar-1}
     ${libs.PrimeFaces_6.2.classpath}:\
